--- a/.github/workflows/lint-basics.yml
+++ b/.github/workflows/lint-basics.yml
@@ -24,16 +24,16 @@ jobs:
     steps:
       - name: "Checkout ${{ github.repository }}"
         uses: actions/checkout@v4
-      - name: GitHub Action Lint
+      - name: Lint GitHub Actions
         uses: devops-actions/actionlint@v0.1.2
-      - name: XML Lint
+      - name: Lint XML
         uses: action-pack/valid-xml@v1
         with:
           path: "${{ inputs.xml_path }}"
           file-endings: "${{ inputs.xml_file_endings }}"
-      - name: Markdown Lint
+      - name: Lint Markdown
         run: docker run --volume "$PWD:/workdir" ghcr.io/igorshubovych/markdownlint-cli:latest "**/*.md"
-      - name: PHP syntax check
+      - name: Lint PHP syntax
         run: find . -name '*.php' -exec php -l {} \;
-      - name: PHP Composer Lint
+      - name: Lint PHP Composer
         run: "composer validate --strict"
