--- a/.github/workflows/php-cs-fixer.yml
+++ b/.github/workflows/php-cs-fixer.yml
@@ -2,6 +2,12 @@ name: PHP-CS-Fixer
 
 on:
     workflow_call:
+        inputs:
+            config_path:
+                description: "Path to the PHP-CS-Fixer configuration file"
+                type: string
+                required: false
+                default: ".php-cs-fixer.dist.php"
 
 jobs:
   PHP-CS-Fixer:
@@ -23,4 +29,4 @@ jobs:
       - name: PHP-CS-Fixer
         uses: docker://oskarstark/php-cs-fixer-ga
         with:
-          args: --config=.php-cs-fixer.dist.php -v --dry-run --stop-on-violation --using-cache=no
+          args: --config="${{ inputs.config_path }}" -v --dry-run --stop-on-violation --using-cache=no
