--- a/.github/workflows/php-cs-fixer.yml
+++ b/.github/workflows/php-cs-fixer.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   PHP-CS-Fixer:
-    # name: PHP-CS-Fixer
+    name: PHP-CS-Fixer
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
