--- a/.github/workflows/php-cs-fixer.yml
+++ b/.github/workflows/php-cs-fixer.yml
@@ -14,7 +14,8 @@ jobs:
     name: PHP-CS-Fixer
     runs-on: ubuntu-22.04
     steps:
-      - uses: actions/checkout@v4
+      - name: "Checkout ${{ github.repository }}"
+        uses: actions/checkout@v4
       - name: Get changed files
         id: changed-files
         uses: tj-actions/changed-files@v45
@@ -26,7 +27,7 @@ jobs:
           echo "PHPCS_EXTRA_ARGS<<EOF" >> $GITHUB_ENV
           echo "$EXTRA_ARGS" >> $GITHUB_ENV
           echo "EOF" >> $GITHUB_ENV
-      - name: PHP-CS-Fixer
+      - name: Run PHP-CS-Fixer
         uses: docker://oskarstark/php-cs-fixer-ga
         with:
           args: --config="${{ inputs.config_path }}" -v --dry-run --stop-on-violation --using-cache=no
