--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -26,6 +26,8 @@ jobs:
     steps:
       - name: "Checkout ${{ github.repository }}"
         uses: actions/checkout@v4
+      - name: Configure Git safe directory
+        run: git config --global --add safe.directory /github/workspace
       - name: Install composer dependencies
         uses: php-actions/composer@v6
       - name: Run PHPStan
