--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -28,6 +28,10 @@ jobs:
         uses: actions/checkout@v4
       - name: Configure Git safe directory
         run: git config --global --add safe.directory /app
+      - name: Temp php v
+        run: echo "PHP version is ${{ inputs.php_version }}"
+      - name: Temp php v real
+        run: php -v
       - name: Install composer dependencies
         uses: php-actions/composer@v6
       - name: Run PHPStan
