#2 remove temporarily hard code php version

--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -39,4 +39,4 @@ jobs:
         with:
           level: "${{ inputs.level }}"
           path: "${{ inputs.path }}"
-          php_version: 8.4
+          php_version: "${{ inputs.php_version }}"
